# tkgl

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  tkgl.vplspec  vcpkg-configuration.json  vcpkg.json
demo/: CMakeLists.txt  demo.cpp
lib/: CMakeLists.txt
lib/include/tkgl/: tkgl.hpp  tkgl_axis.hpp  tkgl_base.hpp  tkgl_camera.hpp  tkgl_drawer.hpp  tkgl_graphic.hpp  tkgl_render.hpp  tkgl_renderer.hpp  tkgl_renderer_line.hpp  tkgl_renderer_point.hpp  tkgl_renderer_triangle.hpp  tkgl_shader.hpp  tkgl_shape.hpp  tkgl_shape_axis.hpp  tkgl_shape_circle.hpp  tkgl_shape_fan.hpp  tkgl_shape_grid.hpp  tkgl_shape_point.hpp  tkgl_shape_polygon.hpp  tkgl_shape_quad.hpp  tkgl_shape_segment.hpp  tkgl_shape_strip.hpp  tkgl_window.hpp
lib/src/tkgl/: CMakeLists.txt  tkgl.cpp  tkgl_axis.cpp  tkgl_base.cpp  tkgl_camera.cpp  tkgl_core.cpp  tkgl_drawer.cpp  tkgl_graphic.cpp  tkgl_render.cpp  tkgl_renderer.cpp  tkgl_renderer_line.cpp  tkgl_renderer_point.cpp  tkgl_renderer_triangle.cpp  tkgl_shader.cpp  tkgl_shape.cpp  tkgl_shape_axis.cpp  tkgl_shape_circle.cpp  tkgl_shape_fan.cpp  tkgl_shape_grid.cpp  tkgl_shape_point.cpp  tkgl_shape_polygon.cpp  tkgl_shape_quad.cpp  tkgl_shape_segment.cpp  tkgl_shape_strip.cpp  tkgl_window.cpp
test/: tkgl_axis_test.cpp  tkgl_test.cpp
vcport/: portfile.cmake  vcpkg.json
